--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>HELLO COURSERA</title>
+    <title>HELLO COURSERA is triller</title>
   </head>
   <body>
     <h1>hello COURSERA </h1>
